<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ngoline.easygpg.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_encrypt"
        android:name="com.ngoline.easygpg.ui.encrypt.EncryptFragment"
        android:label="@string/menu_encrypt"
        tools:layout="@layout/fragment_encrypt" />

    <fragment
        android:id="@+id/nav_keys"
        android:name="com.ngoline.easygpg.ui.keys.KeysFragment"
        android:label="@string/menu_keys"
        tools:layout="@layout/fragment_keys" />
</navigation>