<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.decrypt.DecryptFragment">

    <EditText
        android:id="@+id/editTextCipher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:hint="@string/enter_cipher"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonDecrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/decrypt" />

    <TextView
        android:id="@+id/textViewDecrypted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/decrypted_message_will_appear_here"
        android:textIsSelectable="true"
        android:textSize="18sp" />
</LinearLayout>